进一步理解二分法，初步使用快速幂的思想

--- a/代码随想录/2023-10-24-2.md
+++ b/代码随想录/2023-10-24-2.md
@@ -13,7 +13,7 @@
 ```typescript
 function search(nums: number[], target: number): number {
     let left = 0;
-    let right = nums.length - 1;
+    let right = nums.length;
     while (left < right) {
         let middle = (left + right) >> 1;
         if (nums[middle] === target) {
@@ -32,7 +32,7 @@ function search(nums: number[], target: number): number {
 
 发现自己连二分查找都写不对，刚开始没有明白"区间"的概念，边界条件判断错了很多次，但总的来说明白了就会很好写
 
-[35. 搜索插入位置](https://leetcode.cn/problems/search-insert-position/)
+## [35. 搜索插入位置](https://leetcode.cn/problems/search-insert-position/)
 
 简单
 
